# Criterion-Benchmarking

./: Cargo.toml
benches/: tpt_benchmark.rs
src/: lib.rs
